--- a/src/pages/ADashboard.css
+++ b/src/pages/ADashboard.css
@@ -22,7 +22,7 @@ body, html {
   
   .line {
     width: 100vw;
-    height: 80px;
+    height: 60px;
     background-color: #8F6B61;
     grid-column: span 2; /* Ensure the line spans the full width */
   }
@@ -36,7 +36,7 @@ body, html {
     width: 300px;
     height: 100px;
     margin-left: 150px;
-  
+  border-radius: 20px;
     
   }
   
