--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -7,7 +7,7 @@
 }
 .homepage-content img {
   max-width: 100%;
-  height: 100vh;
+  height: calc(100vh + 150px);
   object-fit: cover;
   z-index: -1;
 }
@@ -16,7 +16,7 @@
   position: absolute;
   transform: translate(-50%, -50%);
   left: 50%;
-  top: 25%;
+  top: 50%;
   text-align: center;
   text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.8);
   color: white;
@@ -36,7 +36,7 @@
   position: absolute;
   transform: translate(-50%, -50%);
   left: 50%;
-  bottom: 15%;
+  bottom: 5%;
   text-align: center;
   display: flex;
   gap: 20px;
