change css parts

--- a/src/components/AdminLogin.css
+++ b/src/components/AdminLogin.css
@@ -1,11 +1,10 @@
-body {
+/*body {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #ffd700;
     margin: 0;
-}
+}*/
 
 .adminlogin {
     position: relative;
