--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -6,6 +6,8 @@
   height:100%;
 }
 .homepage-content img {
+  background-size: cover;
+  position: relative;
   max-width: 100%;
   height: calc(100vh + 150px);
   object-fit: cover;
