--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -9,7 +9,7 @@
   background-size: cover;
   position: relative;
   max-width: 100%;
-  height: calc(100vh + 150px);
+  height: 100vh;
   object-fit: cover;
   z-index: -1;
 }
@@ -18,7 +18,7 @@
   position: absolute;
   transform: translate(-50%, -50%);
   left: 50%;
-  top: 50%;
+  top: 25%;
   text-align: center;
   text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.8);
   color: white;
@@ -38,7 +38,7 @@
   position: absolute;
   transform: translate(-50%, -50%);
   left: 50%;
-  bottom: 5%;
+  bottom: 15%;
   text-align: center;
   display: flex;
   gap: 20px;
