--- a/src/pages/ADashboard.css
+++ b/src/pages/ADashboard.css
@@ -1,14 +1,13 @@
-body, html {
+
+  
+  .all {
+    display: flex;
+    height: 100vh;
     margin: 0;
     padding: 0;
     height: 100vh;
     font-family: Arial, sans-serif;
-    width:100vw;
-  }
-  
-  .all {
-    display: flex;
-    height: 100%;
+    
   }
   .dashboard {
     display: grid;
