--- a/src/pages/AdminLoginPage.css
+++ b/src/pages/AdminLoginPage.css
@@ -3,7 +3,7 @@
     padding: 0;
     height: 100vh;
     width: 100vw;
-    background-color: rgb(146, 144, 119);
+    background-color: #E1CDBC;
     font-family: 'Times New Roman', Times, serif;
     display: flex;
     flex-direction: column;
