--- a/src/components/USidebar.css
+++ b/src/components/USidebar.css
@@ -12,7 +12,7 @@ body, html {
   }
   
   .sidebar {
-    width: 200px;
+    width: 230px;
     background-color:#8F6B61;
     color: white;
     display: flex;
@@ -26,22 +26,25 @@ body, html {
     display: flex;
     align-items: center;
     justify-content: left;
-    padding: 20px;
+    padding: 25px;
     margin: 10px 0;
     cursor: pointer;
     background: none;
     border: none;
     color: white;
-    font-size: 18px;
+    
     font-weight: 700;
     transition: transform 0.3s ease;
+    margin-top: 50px;
+    font-size: 20px;
+   
 
   }
   
   .sidebar-item img {
     margin-right: 10px;
-    width: 24px;  /* Adjust the width as needed */
-    height: 24px; /* Adjust the height as needed */
+    width: 26px;  /* Adjust the width as needed */
+    height: 26px; /* Adjust the height as needed */
   }
   
   
@@ -49,6 +52,9 @@ body, html {
     transform: scale(1.1); /* Scale up the item slightly on hover */
     background-color:rgb(53, 12, 17);
     border-radius: 10px;
+    width: 200px;
+    height: 60px;
+   
   }
   @media (max-width: 768px) {
     .all {
