--- a/src/pages/ADashboard.css
+++ b/src/pages/ADashboard.css
@@ -70,6 +70,26 @@ body, html {
     background-color: rgb(136, 123, 86);
    
   }
+  button[name='view'] {
+    background-color: #af7e64; /* Green background */
+    border: none; /* Remove borders */
+    color: white; /* White text */
+    padding: 10px 20px; /* Padding */
+    text-align: center; /* Center the text */
+    text-decoration: none; /* Remove underline */
+    display: inline-block; /* Make the button inline */
+    font-size: 16px; /* Increase font size */
+    margin-top: 10px; /* Add space on top */
+    cursor: pointer; /* Pointer cursor on hover */
+    border-radius: 25px; /* Rounded corners */
+    width: 150px;
+    height: 40px;
+    font-weight: 600;
+}
+
+button[name='view']:hover {
+    background-color:#EDD9AD ; /* Darker green on hover */
+}
   
   @media (max-width: 768px) {
     .all {
