--- a/src/pages/UProfile.css
+++ b/src/pages/UProfile.css
@@ -1,25 +1,116 @@
 .profile {
     display: flex;
     height: 100vh;
+    overflow: hidden;
   }
 
 
   .pro {
     display: grid;
     grid-template-columns: repeat(2, 1fr); 
-    gap: 20px;
+    gap: 10px;
     
     background-color: #EDD9AD;
     overflow-y: auto;
     height: 100vh;
-    width: calc(100vw - 200px); /* Adjust width to account for sidebar */
+    width: calc(100% - 200px); /* Adjust width to account for sidebar */
     
   }
 
 
   .line2 {
-    width: 100vw;
+    width: 100%;
     height: 60px;
     background-color: #8F6B61;
-    grid-column: span 2; /* Ensure the line spans the full width */
+    grid-column: span 2;
   }
+
+
+  .profile-details {
+    width: calc(100vw - 250px);
+    height: calc(100vh - 80px);
+    flex-grow: 1;
+    background-color: 	#f5f5dc;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    padding: 30px 50px;
+    border-radius: 8px;
+    margin: 0px 0px 10px 10px;
+    box-sizing: border-box;
+    max-width: 100%;
+  }
+  
+  .profile-details h2 {
+    margin: 20px 0px;
+   
+  }
+  
+  .profile-picture {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 50px;
+  }
+  
+  .picture-placeholder {
+    width: 100px;
+    height: 100px;
+    background-color: #fff;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+  
+  .picture-placeholder span {
+    font-size: 40px;
+  }
+  
+  .add-icon {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background-color: #007bff;
+    color: #fff;
+    border-radius: 50%;
+    padding: 2px 6px;
+    font-size: 16px;
+  }
+  
+  .profile-picture p {
+    margin-top: 10px;
+    font-weight: bold;
+  }
+  
+
+  .details{
+    margin-bottom: 25px;
+  }
+
+  .details p {
+    font-size: 16px;
+    margin: 5px 0;
+    padding: 10px;
+  }
+  
+  .change-password-button {
+    background-color: #f0c75e;
+    color: #333;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+    justify-content: flex-end;
+  }
+  
+  .change-password-button img {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+  }
+
+  
